--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,10 +1,88 @@
+<!DOCTYPE HTML>
 <html>
     <head>
-        <link type="text/css" href="{{ url_for('static', filename='css/ui-lightness/jquery-ui-1.8.10.custom.css') }}" rel="stylesheet">
-        <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-        <script type="text/javascript" src="js/jquery-ui-1.8.10.custom.min.js"></script> 
+        <style type="text/css">@import url(/static/css/plupload.queue.css);</style>
+        <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+        <script type="text/javascript">
+            google.load("jquery", "1.3");
+        </script>
+
+        <!-- Thirdparty intialization scripts, needed for the Google Gears and BrowserPlus runtimes -->
+        <script type="text/javascript" src="/static/plupload/js/gears_init.js"></script>
+        <script type="text/javascript" src="http://bp.yahooapis.com/2.4.21/browserplus-min.js"></script>
+
+        <!-- Load plupload and all it's runtimes and finally the jQuery UI queue widget -->
+        <script type="text/javascript" src="/static/plupload/js/plupload.full.min.js"></script>
+        <script type="text/javascript" src="/static/plupload/js/jquery.ui.plupload.min.js"></script>
+
     </head>
     <body>
-        Hello, world!
+
+
+        <script type="text/javascript">
+        // Convert divs to queue widgets when the DOM is ready
+        
+        $(document).ready(function(){
+            $(function() {
+                $("#uploader").plupload({
+                    // General settings
+                    runtimes : 'gears,flash,silverlight,browserplus,html5',
+                    url : '/',
+                    max_file_size : '10mb',
+                    chunk_size : '1mb',
+                    unique_names : true,
+
+                    // Resize images on clientside if we can
+                    resize : {width : 320, height : 240, quality : 90},
+
+                    // Specify what files to browse for
+                    filters : [
+                        {title : "Image files", extensions : "jpg,gif,png"},
+                        {title : "Zip files", extensions : "zip"}
+                    ],
+
+                    // Flash settings
+                    flash_swf_url : '/static/plupload/js/plupload.flash.swf',
+
+                    // Silverlight settings
+                    silverlight_xap_url : '/static/plupload/js/plupload.silverlight.xap'
+                });
+
+                // Client side form validation
+                $('form').submit(function(e) {
+                    var uploader = $('#uploader').pluploadQueue();
+
+                    // Validate number of uploaded files
+                    if (uploader.total.uploaded == 0) {
+                        // Files in queue upload them first
+                        if (uploader.files.length > 0) {
+                            // When all files are uploaded submit form
+                            uploader.bind('UploadProgress', function() {
+                                if (uploader.total.uploaded == uploader.files.length)
+                                    $('form').submit();
+                            });
+
+                            uploader.start();
+                        } else
+                            alert('You must at least upload one file.');
+
+                        e.preventDefault();
+                    }
+                });
+            });
+        });
+        </script>
+
+
+        <form action="/" method="POST" enctype="multipart/form-data">
+            <div id="uploader">
+                <p>You browser doesn't have Flash, Silverlight, Gears, BrowserPlus or HTML5 support.</p>
+                <input type="file" name="datafile" size="40">
+                <input type="submit" value="Send">
+            </div>
+        </form>
+        
+
+
     </body>
 </html>
