html5 is our last hope

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -27,7 +27,7 @@
             $(function() {
                 $("#uploader").plupload({
                     // General settings
-                    runtimes : 'html5,gears,flash,silverlight,browserplus',
+                    runtimes : 'gears,flash,silverlight,browserplus,html5',
                     url : '/',
                     max_file_size : '10mb',
                     chunk_size : '1mb',
