--- a/templates/upload.html
+++ b/templates/upload.html
@@ -24,10 +24,18 @@
         // Convert divs to queue widgets when the DOM is ready
         
         $(document).ready(function(){
+            var runtimes = 'gears,flash,silverlight,browserplus,html5';
+
+            if (typeof window.FileReader === 'undefined') {
+            } else {
+                runtimes = 'html5,gears,flash,silverlight,browserplus';
+            }
+            
+
             $(function() {
                 $("#uploader").plupload({
                     // General settings
-                    runtimes : 'gears,flash,silverlight,browserplus,html5',
+                    runtimes : runtimes,
                     url : '/',
                     max_file_size : '10mb',
                     chunk_size : '1mb',
