--- a/static/css/plupload.queue.css
+++ b/static/css/plupload.queue.css
@@ -56,7 +56,8 @@
 
 .plupload_header {background: #2A2C2E url('../img/backgrounds.gif') repeat-x;}
 .plupload_header_content {
-	background: url('../img/backgrounds.gif') no-repeat 0 -317px;
+	/*background: url('../img/backgrounds.gif') no-repeat 0 -317px;*/
+    background: #3366FF;
 	min-height: 56px;
 	padding-left: 60px;
 	color: #FFF;
